fix index pagination bug, fix open modal shifting bug

--- a/app/assets/stylesheets/shared/general.scss
+++ b/app/assets/stylesheets/shared/general.scss
@@ -185,7 +185,10 @@ span.favorite { color: $orange; }
 }
 
 // bootstrap modal scroll fix
-body.modal-open { position: fixed; }
+
+@media(max-width:767px){
+  body.modal-open { position: fixed; }
+}
 // .modal-large {
 //   position: absolute;
 //   min-height: 500px;
